<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--    FIRST LAYOUT-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/team_a"
                android:textColor="#616161"
                android:textSize="@dimen/text_size" />

<!--            Score View for Team A-->
            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="@dimen/big_score_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="scoreForTeamA"
                android:text="@string/goal_text_A" />

            <!--  Foul View for Team A-->
            <TextView
                android:id="@+id/team_a_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/_00"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:onClick="foulForTeamA"
                android:text="@string/foul_text_A" />

            <!--  Yellow Card View for Team A-->
            <TextView
                android:id="@+id/team_a_yellow_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/yellow_card_scoreA"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:onClick="yellowCardForTeamA"
                android:text="@string/yellow_card_text_A" />

            <!--  Red Card View for Team A-->
            <TextView
                android:id="@+id/team_a_red_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/red_card_score_a"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:onClick="redCardForTeamA"
                android:text="@string/red_card_text_a" />

        </LinearLayout>
        <!--       LONG LINE-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <!--SECOND LAYOUT-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/team_b_text"
                android:textColor="#616161"
                android:textSize="@dimen/text_size" />

            <!--            Score View for Team B-->
            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/team_b_score"
                android:textColor="#000000"
                android:textSize="@dimen/big_score_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="scoreForTeamB"
                android:text="@string/goal_text_B" />

            <!--  Foul View for Team B-->
            <TextView
                android:id="@+id/team_b_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/foul_text_B"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:onClick="foulForTeamB"
                android:text="@string/foul_teamB" />

            <!--  Yellow Card View for Team B-->
            <TextView
                android:id="@+id/team_b_yellow_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/yellow_card_score_B"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:onClick="yellowCardForTeamB"
                android:text="@string/yellow_card_text_B" />

            <!--  Red Card View for Team B-->
            <TextView
                android:id="@+id/team_b_red_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/red_card_score_b"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:onClick="redCardForTeamB"
                android:text="@string/red_card_text_B" />
        </LinearLayout>
    </LinearLayout>

<!-- Reset button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="16dp"
        android:onClick="resetScore"
        android:text="@string/reset" />
</RelativeLayout>